Testit GridLogic luokalle kirjoitettu. Uusi pit-raportti myös generoitu

--- a/Dokumentointi/pit/com.github.tilastokeskus.matertis.core/Direction.java.html
+++ b/Dokumentointi/pit/com.github.tilastokeskus.matertis.core/Direction.java.html
@@ -55,11 +55,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_1'/>
 1
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_1'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -67,11 +67,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_2'/>
 2
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_2'></a>
 </td>
 <td class=''><pre><span  class=''>package com.github.tilastokeskus.matertis.core;</span></pre></td></tr>
 
@@ -79,11 +79,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_3'/>
 3
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_3'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -91,11 +91,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_4'/>
 4
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_4'></a>
 </td>
 <td class=''><pre><span  class=''>/**</span></pre></td></tr>
 
@@ -103,11 +103,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_5'/>
 5
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_5'></a>
 </td>
 <td class=''><pre><span  class=''> *</span></pre></td></tr>
 
@@ -115,11 +115,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_6'/>
 6
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_6'></a>
 </td>
 <td class=''><pre><span  class=''> * @author tilastokeskus</span></pre></td></tr>
 
@@ -127,11 +127,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_7'/>
 7
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_7'></a>
 </td>
 <td class=''><pre><span  class=''> */</span></pre></td></tr>
 
@@ -139,11 +139,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_8'/>
 8
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_8'></a>
 </td>
 <td class='covered'><pre><span  class=''>public enum Direction {</span></pre></td></tr>
 
@@ -151,11 +151,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_9'/>
 9
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_9'></a>
 </td>
 <td class='covered'><pre><span  class=''>    LEFT, RIGHT, UP, DOWN;</span></pre></td></tr>
 
@@ -163,11 +163,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_10'/>
 10
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_10'></a>
 </td>
 <td class=''><pre><span  class=''>    private Direction opposite;</span></pre></td></tr>
 
@@ -175,11 +175,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_11'/>
 11
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_11'></a>
 </td>
 <td class=''><pre><span  class=''>    </span></pre></td></tr>
 
@@ -187,11 +187,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_12'/>
 12
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_12'></a>
 </td>
 <td class=''><pre><span  class=''>    static {</span></pre></td></tr>
 
@@ -199,11 +199,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_13'/>
 13
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_13'></a>
 </td>
 <td class='covered'><pre><span  class=''>        LEFT.opposite = RIGHT;</span></pre></td></tr>
 
@@ -211,11 +211,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_14'/>
 14
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_14'></a>
 </td>
 <td class='covered'><pre><span  class=''>        RIGHT.opposite = LEFT;</span></pre></td></tr>
 
@@ -223,11 +223,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_15'/>
 15
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_15'></a>
 </td>
 <td class='covered'><pre><span  class=''>        UP.opposite = DOWN;</span></pre></td></tr>
 
@@ -235,11 +235,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_16'/>
 16
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_16'></a>
 </td>
 <td class='covered'><pre><span  class=''>        DOWN.opposite = UP;</span></pre></td></tr>
 
@@ -247,11 +247,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_17'/>
 17
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_17'></a>
 </td>
 <td class='covered'><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -259,11 +259,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_18'/>
 18
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_18'></a>
 </td>
 <td class=''><pre><span  class=''>    </span></pre></td></tr>
 
@@ -271,11 +271,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_19'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_19'/>
 19
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_19'></a>
 </td>
 <td class=''><pre><span  class=''>    public Direction getOpposite() {</span></pre></td></tr>
 
@@ -283,11 +283,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_20'/>
 20
 </td>
 <td class='survived'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_20'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_20'>1</a>
 </td>
 <td class='uncovered'><pre><span  class='survived'>        return this.opposite;</span></pre></td></tr>
 
@@ -295,11 +295,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_21'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_21'/>
 21
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_21'></a>
 </td>
 <td class=''><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -307,11 +307,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@5a0f898e_22'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@a6302ea_22'/>
 22
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_22'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_22'></a>
 </td>
 <td class=''><pre><span  class=''>}</span></pre></td></tr>
 
@@ -322,11 +322,11 @@ padding-left: 5px;
 
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5a0f898e_20'>20</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@a6302ea_20'>20</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5a0f898e_20'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@a6302ea_20'/> 
 
 <p class='NO_COVERAGE'>mutated return of Object value for com/github/tilastokeskus/matertis/core/Direction::getOpposite to ( if (x != null) null else throw new RuntimeException ) : NO_COVERAGE</p> 
 </td>
