--- a/Dokumentointi/pit/com.github.tilastokeskus.matertis.action/CloseUIAction.java.html
+++ b/Dokumentointi/pit/com.github.tilastokeskus.matertis.action/CloseUIAction.java.html
@@ -55,11 +55,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_1'/>
 1
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_1'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -67,11 +67,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_2'/>
 2
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_2'></a>
 </td>
 <td class=''><pre><span  class=''>package com.github.tilastokeskus.matertis.action;</span></pre></td></tr>
 
@@ -79,11 +79,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_3'/>
 3
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_3'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -91,11 +91,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_4'/>
 4
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_4'></a>
 </td>
 <td class=''><pre><span  class=''>import com.github.tilastokeskus.matertis.ui.UI;</span></pre></td></tr>
 
@@ -103,11 +103,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_5'/>
 5
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_5'></a>
 </td>
 <td class=''><pre><span  class=''>import java.awt.event.ActionEvent;</span></pre></td></tr>
 
@@ -115,11 +115,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_6'/>
 6
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_6'></a>
 </td>
 <td class=''><pre><span  class=''>import javax.swing.AbstractAction;</span></pre></td></tr>
 
@@ -127,11 +127,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_7'/>
 7
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_7'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -139,11 +139,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_8'/>
 8
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_8'></a>
 </td>
 <td class=''><pre><span  class=''>/**</span></pre></td></tr>
 
@@ -151,11 +151,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_9'/>
 9
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_9'></a>
 </td>
 <td class=''><pre><span  class=''> *</span></pre></td></tr>
 
@@ -163,11 +163,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_10'/>
 10
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_10'></a>
 </td>
 <td class=''><pre><span  class=''> * @author tilastokeskus</span></pre></td></tr>
 
@@ -175,11 +175,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_11'/>
 11
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_11'></a>
 </td>
 <td class=''><pre><span  class=''> */</span></pre></td></tr>
 
@@ -187,11 +187,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_12'/>
 12
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_12'></a>
 </td>
 <td class=''><pre><span  class=''>public class CloseUIAction extends AbstractAction {</span></pre></td></tr>
 
@@ -199,11 +199,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_13'/>
 13
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_13'></a>
 </td>
 <td class=''><pre><span  class=''>    </span></pre></td></tr>
 
@@ -211,11 +211,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_14'/>
 14
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_14'></a>
 </td>
 <td class=''><pre><span  class=''>    private final UI ui;</span></pre></td></tr>
 
@@ -223,11 +223,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_15'/>
 15
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_15'></a>
 </td>
 <td class=''><pre><span  class=''>    </span></pre></td></tr>
 
@@ -235,11 +235,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_16'/>
 16
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_16'></a>
 </td>
 <td class=''><pre><span  class=''>    public CloseUIAction(String text, UI ui) {</span></pre></td></tr>
 
@@ -247,11 +247,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_17'/>
 17
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_17'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>        super(text);</span></pre></td></tr>
 
@@ -259,11 +259,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_18'/>
 18
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_18'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>        this.ui = ui;</span></pre></td></tr>
 
@@ -271,11 +271,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_19'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_19'/>
 19
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_19'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -283,11 +283,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_20'/>
 20
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_20'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -295,11 +295,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_21'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_21'/>
 21
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_21'></a>
 </td>
 <td class=''><pre><span  class=''>    @Override</span></pre></td></tr>
 
@@ -307,11 +307,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_22'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_22'/>
 22
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_22'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_22'></a>
 </td>
 <td class=''><pre><span  class=''>    public void actionPerformed(ActionEvent e) {</span></pre></td></tr>
 
@@ -319,11 +319,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_23'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_23'/>
 23
 </td>
 <td class='survived'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_23'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_23'>1</a>
 </td>
 <td class='uncovered'><pre><span  class='survived'>        ui.close();</span></pre></td></tr>
 
@@ -331,11 +331,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_24'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_24'/>
 24
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_24'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_24'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -343,11 +343,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_25'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_25'/>
 25
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_25'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_25'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -355,11 +355,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@49f87087_26'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@5970e44c_26'/>
 26
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_26'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_26'></a>
 </td>
 <td class=''><pre><span  class=''>}</span></pre></td></tr>
 
@@ -370,11 +370,11 @@ padding-left: 5px;
 
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@49f87087_23'>23</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@5970e44c_23'>23</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@49f87087_23'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@5970e44c_23'/> 
 
 <p class='NO_COVERAGE'>removed call to com/github/tilastokeskus/matertis/ui/UI::close : NO_COVERAGE</p> 
 </td>
