--- a/Dokumentointi/pit/com.github.tilastokeskus.matertis.action/StartGameAction.java.html
+++ b/Dokumentointi/pit/com.github.tilastokeskus.matertis.action/StartGameAction.java.html
@@ -55,11 +55,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_1'/>
 1
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_1'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -67,11 +67,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_2'/>
 2
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_2'></a>
 </td>
 <td class=''><pre><span  class=''>package com.github.tilastokeskus.matertis.action;</span></pre></td></tr>
 
@@ -79,11 +79,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_3'/>
 3
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_3'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -91,11 +91,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_4'/>
 4
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_4'></a>
 </td>
 <td class=''><pre><span  class=''>import com.github.tilastokeskus.matertis.core.GameHandler;</span></pre></td></tr>
 
@@ -103,11 +103,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_5'/>
 5
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_5'></a>
 </td>
 <td class=''><pre><span  class=''>import com.github.tilastokeskus.matertis.core.MatertisGame;</span></pre></td></tr>
 
@@ -115,11 +115,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_6'/>
 6
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_6'></a>
 </td>
 <td class=''><pre><span  class=''>import com.github.tilastokeskus.matertis.ui.GameUI;</span></pre></td></tr>
 
@@ -127,11 +127,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_7'/>
 7
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_7'></a>
 </td>
 <td class=''><pre><span  class=''>import java.awt.event.ActionEvent;</span></pre></td></tr>
 
@@ -139,11 +139,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_8'/>
 8
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_8'></a>
 </td>
 <td class=''><pre><span  class=''>import javax.swing.AbstractAction;</span></pre></td></tr>
 
@@ -151,11 +151,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_9'/>
 9
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_9'></a>
 </td>
 <td class=''><pre><span  class=''>import javax.swing.SwingUtilities;</span></pre></td></tr>
 
@@ -163,11 +163,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_10'/>
 10
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_10'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -175,11 +175,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_11'/>
 11
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_11'></a>
 </td>
 <td class=''><pre><span  class=''>/**</span></pre></td></tr>
 
@@ -187,11 +187,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_12'/>
 12
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_12'></a>
 </td>
 <td class=''><pre><span  class=''> *</span></pre></td></tr>
 
@@ -199,11 +199,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_13'/>
 13
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_13'></a>
 </td>
 <td class=''><pre><span  class=''> * @author tilastokeskus</span></pre></td></tr>
 
@@ -211,11 +211,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_14'/>
 14
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_14'></a>
 </td>
 <td class=''><pre><span  class=''> */</span></pre></td></tr>
 
@@ -223,11 +223,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_15'/>
 15
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_15'></a>
 </td>
 <td class=''><pre><span  class=''>public class StartGameAction extends AbstractAction {</span></pre></td></tr>
 
@@ -235,11 +235,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_16'/>
 16
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_16'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -247,11 +247,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_17'/>
 17
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_17'></a>
 </td>
 <td class=''><pre><span  class=''>    public StartGameAction(String text) {</span></pre></td></tr>
 
@@ -259,11 +259,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_18'/>
 18
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_18'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>        super(text);</span></pre></td></tr>
 
@@ -271,11 +271,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_19'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_19'/>
 19
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_19'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -283,11 +283,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_20'/>
 20
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_20'></a>
 </td>
 <td class=''><pre><span  class=''>    </span></pre></td></tr>
 
@@ -295,11 +295,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_21'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_21'/>
 21
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_21'></a>
 </td>
 <td class=''><pre><span  class=''>    @Override</span></pre></td></tr>
 
@@ -307,11 +307,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_22'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_22'/>
 22
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_22'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_22'></a>
 </td>
 <td class=''><pre><span  class=''>    public void actionPerformed(ActionEvent e) {</span></pre></td></tr>
 
@@ -319,11 +319,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_23'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_23'/>
 23
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_23'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_23'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>        MatertisGame logic = new MatertisGame(10, 20);</span></pre></td></tr>
 
@@ -331,11 +331,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_24'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_24'/>
 24
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_24'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_24'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>        GameHandler handler = new GameHandler(logic);</span></pre></td></tr>
 
@@ -343,11 +343,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_25'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_25'/>
 25
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_25'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_25'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>        GameUI ui = new GameUI(&#34;New Game&#34;, handler);        </span></pre></td></tr>
 
@@ -355,11 +355,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_26'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_26'/>
 26
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_26'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_26'></a>
 </td>
 <td class=''><pre><span  class=''>        </span></pre></td></tr>
 
@@ -367,11 +367,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_27'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_27'/>
 27
 </td>
 <td class='survived'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_27'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_27'>1</a>
 </td>
 <td class='uncovered'><pre><span  class='survived'>        SwingUtilities.invokeLater(ui);</span></pre></td></tr>
 
@@ -379,11 +379,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_28'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_28'/>
 28
 </td>
 <td class='survived'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_28'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_28'>1</a>
 </td>
 <td class='uncovered'><pre><span  class='survived'>        handler.addObserver(ui);</span></pre></td></tr>
 
@@ -391,11 +391,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_29'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_29'/>
 29
 </td>
 <td class='survived'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_29'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_29'>1</a>
 </td>
 <td class='uncovered'><pre><span  class='survived'>        handler.startGame();</span></pre></td></tr>
 
@@ -403,11 +403,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_30'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_30'/>
 30
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_30'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_30'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -415,11 +415,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_31'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_31'/>
 31
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_31'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_31'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -427,11 +427,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@78e6dadd_32'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@134b5a7b_32'/>
 32
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_32'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_32'></a>
 </td>
 <td class=''><pre><span  class=''>}</span></pre></td></tr>
 
@@ -442,33 +442,33 @@ padding-left: 5px;
 
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@78e6dadd_27'>27</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@134b5a7b_27'>27</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_27'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_27'/> 
 
 <p class='NO_COVERAGE'>removed call to javax/swing/SwingUtilities::invokeLater : NO_COVERAGE</p> 
 </td>
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@78e6dadd_28'>28</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@134b5a7b_28'>28</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_28'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_28'/> 
 
 <p class='NO_COVERAGE'>removed call to com/github/tilastokeskus/matertis/core/GameHandler::addObserver : NO_COVERAGE</p> 
 </td>
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@78e6dadd_29'>29</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@134b5a7b_29'>29</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@78e6dadd_29'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@134b5a7b_29'/> 
 
 <p class='NO_COVERAGE'>removed call to com/github/tilastokeskus/matertis/core/GameHandler::startGame : NO_COVERAGE</p> 
 </td>
