--- a/Dokumentointi/pit/com.github.tilastokeskus.matertis/Main.java.html
+++ b/Dokumentointi/pit/com.github.tilastokeskus.matertis/Main.java.html
@@ -55,11 +55,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_1'/>
 1
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_1'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -67,11 +67,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_2'/>
 2
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_2'></a>
 </td>
 <td class=''><pre><span  class=''>package com.github.tilastokeskus.matertis;</span></pre></td></tr>
 
@@ -79,11 +79,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_3'/>
 3
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_3'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -91,11 +91,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_4'/>
 4
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_4'></a>
 </td>
 <td class=''><pre><span  class=''>import com.github.tilastokeskus.matertis.ui.MenuUI;</span></pre></td></tr>
 
@@ -103,11 +103,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_5'/>
 5
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_5'></a>
 </td>
 <td class=''><pre><span  class=''>import javax.swing.SwingUtilities;</span></pre></td></tr>
 
@@ -115,11 +115,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_6'/>
 6
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_6'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -127,11 +127,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_7'/>
 7
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_7'></a>
 </td>
 <td class=''><pre><span  class=''>/**</span></pre></td></tr>
 
@@ -139,11 +139,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_8'/>
 8
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_8'></a>
 </td>
 <td class=''><pre><span  class=''> *</span></pre></td></tr>
 
@@ -151,11 +151,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_9'/>
 9
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_9'></a>
 </td>
 <td class=''><pre><span  class=''> * @author tilastokeskus</span></pre></td></tr>
 
@@ -163,11 +163,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_10'/>
 10
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_10'></a>
 </td>
 <td class=''><pre><span  class=''> */</span></pre></td></tr>
 
@@ -175,11 +175,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_11'/>
 11
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_11'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>public class Main {</span></pre></td></tr>
 
@@ -187,11 +187,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_12'/>
 12
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_12'></a>
 </td>
 <td class=''><pre><span  class=''>    </span></pre></td></tr>
 
@@ -199,11 +199,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_13'/>
 13
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_13'></a>
 </td>
 <td class=''><pre><span  class=''>    public static void main(String[] args) {</span></pre></td></tr>
 
@@ -211,11 +211,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_14'/>
 14
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_14'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>        MenuUI mainMenu = new MenuUI(&#34;Matertis&#34;);</span></pre></td></tr>
 
@@ -223,11 +223,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_15'/>
 15
 </td>
 <td class='survived'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_15'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_15'>1</a>
 </td>
 <td class='uncovered'><pre><span  class='survived'>        SwingUtilities.invokeLater(mainMenu);</span></pre></td></tr>
 
@@ -235,11 +235,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_16'/>
 16
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_16'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -247,11 +247,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_17'/>
 17
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_17'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -259,11 +259,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@456f2c51_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@12470faf_18'/>
 18
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_18'></a>
 </td>
 <td class=''><pre><span  class=''>}</span></pre></td></tr>
 
@@ -274,11 +274,11 @@ padding-left: 5px;
 
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@456f2c51_15'>15</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@12470faf_15'>15</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@456f2c51_15'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@12470faf_15'/> 
 
 <p class='NO_COVERAGE'>removed call to javax/swing/SwingUtilities::invokeLater : NO_COVERAGE</p> 
 </td>
