Checkstyle raportti päivitetty

--- a/Dokumentointi/checkstyle/xref/allclasses-frame.html
+++ b/Dokumentointi/checkstyle/xref/allclasses-frame.html
@@ -18,6 +18,9 @@
 				<a href="com/github/tilastokeskus/matertis/core/Direction.html" target="classFrame">Direction</a>
 			</li>
 						<li>
+				<a href="com/github/tilastokeskus/matertis/core/Game.html" target="classFrame">Game</a>
+			</li>
+						<li>
 				<a href="com/github/tilastokeskus/matertis/core/GameHandler.html" target="classFrame">GameHandler</a>
 			</li>
 						<li>
@@ -40,9 +43,6 @@
 			</li>
 						<li>
 				<a href="com/github/tilastokeskus/matertis/Main.html" target="classFrame">Main</a>
-			</li>
-						<li>
-				<a href="com/github/tilastokeskus/matertis/core/MatertisGame.html" target="classFrame">MatertisGame</a>
 			</li>
 						<li>
 				<a href="com/github/tilastokeskus/matertis/ui/MenuUI.html" target="classFrame">MenuUI</a>
