--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/core/package-frame.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/core/package-frame.html
@@ -19,6 +19,9 @@
             	<a href="Direction.html" target="classFrame">Direction</a>
           	</li>
           	          	<li>
+            	<a href="Game.html" target="classFrame">Game</a>
+          	</li>
+          	          	<li>
             	<a href="GameHandler.html" target="classFrame">GameHandler</a>
           	</li>
           	          	<li>
@@ -32,9 +35,6 @@
           	</li>
           	          	<li>
             	<a href="Tetromino.html" target="classFrame">L</a>
-          	</li>
-          	          	<li>
-            	<a href="MatertisGame.html" target="classFrame">MatertisGame</a>
           	</li>
           	          	<li>
             	<a href="Tetromino.html" target="classFrame">O</a>
