--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/core/package-summary.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/core/package-summary.html
@@ -42,6 +42,11 @@
             	</tr>
 				            	<tr>
               		<td>
+                		<a href="Game.html" target="classFrame">Game</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="GameHandler.html" target="classFrame">GameHandler</a>
               		</td>
             	</tr>
@@ -63,11 +68,6 @@
 				            	<tr>
               		<td>
                 		<a href="Tetromino.html" target="classFrame">L</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="MatertisGame.html" target="classFrame">MatertisGame</a>
               		</td>
             	</tr>
 				            	<tr>
