Checkstyle raportti päivitetty

--- a/Dokumentointi/checkstyle/xref/allclasses-frame.html
+++ b/Dokumentointi/checkstyle/xref/allclasses-frame.html
@@ -12,10 +12,28 @@
 
 		<ul>
 						<li>
+				<a href="com/github/tilastokeskus/matertis/core/AbstractGameHandler.html" target="classFrame">AbstractGameHandler</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/core/AbstractScoreHandler.html" target="classFrame">AbstractScoreHandler</a>
+			</li>
+						<li>
 				<a href="com/github/tilastokeskus/matertis/action/CloseUIAction.html" target="classFrame">CloseUIAction</a>
 			</li>
 						<li>
+				<a href="com/github/tilastokeskus/matertis/util/Command.html" target="classFrame">Command</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/core/CommandHandler.html" target="classFrame">CommandHandler</a>
+			</li>
+						<li>
 				<a href="com/github/tilastokeskus/matertis/core/Direction.html" target="classFrame">Direction</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/core/command/DownCommand.html" target="classFrame">DownCommand</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/core/command/DropCommand.html" target="classFrame">DropCommand</a>
 			</li>
 						<li>
 				<a href="com/github/tilastokeskus/matertis/core/Game.html" target="classFrame">Game</a>
@@ -24,13 +42,16 @@
 				<a href="com/github/tilastokeskus/matertis/core/GameHandler.html" target="classFrame">GameHandler</a>
 			</li>
 						<li>
+				<a href="com/github/tilastokeskus/matertis/ui/GameMenu.html" target="classFrame">GameMenu</a>
+			</li>
+						<li>
 				<a href="com/github/tilastokeskus/matertis/ui/GamePanel.html" target="classFrame">GamePanel</a>
 			</li>
 						<li>
 				<a href="com/github/tilastokeskus/matertis/ui/GameUI.html" target="classFrame">GameUI</a>
 			</li>
 						<li>
-				<a href="com/github/tilastokeskus/matertis/core/GridLogic.html" target="classFrame">GridLogic</a>
+				<a href="com/github/tilastokeskus/matertis/core/Grid.html" target="classFrame">Grid</a>
 			</li>
 						<li>
 				<a href="com/github/tilastokeskus/matertis/core/Tetromino.html" target="classFrame">I</a>
@@ -42,6 +63,9 @@
 				<a href="com/github/tilastokeskus/matertis/core/Tetromino.html" target="classFrame">L</a>
 			</li>
 						<li>
+				<a href="com/github/tilastokeskus/matertis/core/command/LeftCommand.html" target="classFrame">LeftCommand</a>
+			</li>
+						<li>
 				<a href="com/github/tilastokeskus/matertis/Main.html" target="classFrame">Main</a>
 			</li>
 						<li>
@@ -51,7 +75,34 @@
 				<a href="com/github/tilastokeskus/matertis/core/Tetromino.html" target="classFrame">O</a>
 			</li>
 						<li>
+				<a href="com/github/tilastokeskus/matertis/core/ObservableGameHandler.html" target="classFrame">ObservableGameHandler</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/core/command/PauseCommand.html" target="classFrame">PauseCommand</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/ui/PreviewPanel.html" target="classFrame">PreviewPanel</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/core/command/RightCommand.html" target="classFrame">RightCommand</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/core/command/RotateCommand.html" target="classFrame">RotateCommand</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/ui/RoundedPanel.html" target="classFrame">RoundedPanel</a>
+			</li>
+						<li>
 				<a href="com/github/tilastokeskus/matertis/core/Tetromino.html" target="classFrame">S</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/core/ScoreHandler.html" target="classFrame">ScoreHandler</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/ui/ScorePanel.html" target="classFrame">ScorePanel</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/SettingsManager.html" target="classFrame">SettingsManager</a>
 			</li>
 						<li>
 				<a href="com/github/tilastokeskus/matertis/action/StartGameAction.html" target="classFrame">StartGameAction</a>
