--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/core/package-frame.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/core/package-frame.html
@@ -16,6 +16,15 @@
 
       	<ul>
       		          	<li>
+            	<a href="AbstractGameHandler.html" target="classFrame">AbstractGameHandler</a>
+          	</li>
+          	          	<li>
+            	<a href="AbstractScoreHandler.html" target="classFrame">AbstractScoreHandler</a>
+          	</li>
+          	          	<li>
+            	<a href="CommandHandler.html" target="classFrame">CommandHandler</a>
+          	</li>
+          	          	<li>
             	<a href="Direction.html" target="classFrame">Direction</a>
           	</li>
           	          	<li>
@@ -25,7 +34,7 @@
             	<a href="GameHandler.html" target="classFrame">GameHandler</a>
           	</li>
           	          	<li>
-            	<a href="GridLogic.html" target="classFrame">GridLogic</a>
+            	<a href="Grid.html" target="classFrame">Grid</a>
           	</li>
           	          	<li>
             	<a href="Tetromino.html" target="classFrame">I</a>
@@ -40,7 +49,13 @@
             	<a href="Tetromino.html" target="classFrame">O</a>
           	</li>
           	          	<li>
+            	<a href="ObservableGameHandler.html" target="classFrame">ObservableGameHandler</a>
+          	</li>
+          	          	<li>
             	<a href="Tetromino.html" target="classFrame">S</a>
+          	</li>
+          	          	<li>
+            	<a href="ScoreHandler.html" target="classFrame">ScoreHandler</a>
           	</li>
           	          	<li>
             	<a href="Tetromino.html" target="classFrame">T</a>
