--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/core/package-summary.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/core/package-summary.html
@@ -37,6 +37,21 @@
         	<tbody>
         		            	<tr>
               		<td>
+                		<a href="AbstractGameHandler.html" target="classFrame">AbstractGameHandler</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="AbstractScoreHandler.html" target="classFrame">AbstractScoreHandler</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="CommandHandler.html" target="classFrame">CommandHandler</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="Direction.html" target="classFrame">Direction</a>
               		</td>
             	</tr>
@@ -52,7 +67,7 @@
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="GridLogic.html" target="classFrame">GridLogic</a>
+                		<a href="Grid.html" target="classFrame">Grid</a>
               		</td>
             	</tr>
 				            	<tr>
@@ -77,7 +92,17 @@
             	</tr>
 				            	<tr>
               		<td>
+                		<a href="ObservableGameHandler.html" target="classFrame">ObservableGameHandler</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="Tetromino.html" target="classFrame">S</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="ScoreHandler.html" target="classFrame">ScoreHandler</a>
               		</td>
             	</tr>
 				            	<tr>
