--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/package-frame.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/package-frame.html
@@ -18,6 +18,9 @@
       		          	<li>
             	<a href="Main.html" target="classFrame">Main</a>
           	</li>
+          	          	<li>
+            	<a href="SettingsManager.html" target="classFrame">SettingsManager</a>
+          	</li>
           	      	</ul>
 
 	</body>
