--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/ui/package-frame.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/ui/package-frame.html
@@ -16,6 +16,9 @@
 
       	<ul>
       		          	<li>
+            	<a href="GameMenu.html" target="classFrame">GameMenu</a>
+          	</li>
+          	          	<li>
             	<a href="GamePanel.html" target="classFrame">GamePanel</a>
           	</li>
           	          	<li>
@@ -23,6 +26,15 @@
           	</li>
           	          	<li>
             	<a href="MenuUI.html" target="classFrame">MenuUI</a>
+          	</li>
+          	          	<li>
+            	<a href="PreviewPanel.html" target="classFrame">PreviewPanel</a>
+          	</li>
+          	          	<li>
+            	<a href="RoundedPanel.html" target="classFrame">RoundedPanel</a>
+          	</li>
+          	          	<li>
+            	<a href="ScorePanel.html" target="classFrame">ScorePanel</a>
           	</li>
           	          	<li>
             	<a href="UI.html" target="classFrame">UI</a>
