--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/ui/package-summary.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/ui/package-summary.html
@@ -37,6 +37,11 @@
         	<tbody>
         		            	<tr>
               		<td>
+                		<a href="GameMenu.html" target="classFrame">GameMenu</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="GamePanel.html" target="classFrame">GamePanel</a>
               		</td>
             	</tr>
@@ -48,6 +53,21 @@
 				            	<tr>
               		<td>
                 		<a href="MenuUI.html" target="classFrame">MenuUI</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="PreviewPanel.html" target="classFrame">PreviewPanel</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="RoundedPanel.html" target="classFrame">RoundedPanel</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="ScorePanel.html" target="classFrame">ScorePanel</a>
               		</td>
             	</tr>
 				            	<tr>
