--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/util/package-frame.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/util/package-frame.html
@@ -16,6 +16,9 @@
 
       	<ul>
       		          	<li>
+            	<a href="Command.html" target="classFrame">Command</a>
+          	</li>
+          	          	<li>
             	<a href="TetrominoFactory.html" target="classFrame">TetrominoFactory</a>
           	</li>
           	      	</ul>
