--- a/Dokumentointi/checkstyle/xref/overview-frame.html
+++ b/Dokumentointi/checkstyle/xref/overview-frame.html
@@ -25,6 +25,9 @@
 				<a href="com/github/tilastokeskus/matertis/core/package-frame.html" target="packageFrame">com.github.tilastokeskus.matertis.core</a>
 			</li>
 						<li>
+				<a href="com/github/tilastokeskus/matertis/core/command/package-frame.html" target="packageFrame">com.github.tilastokeskus.matertis.core.command</a>
+			</li>
+						<li>
 				<a href="com/github/tilastokeskus/matertis/ui/package-frame.html" target="packageFrame">com.github.tilastokeskus.matertis.ui</a>
 			</li>
 						<li>
