--- a/Dokumentointi/checkstyle/xref/overview-summary.html
+++ b/Dokumentointi/checkstyle/xref/overview-summary.html
@@ -50,6 +50,11 @@
             	</tr>
 	          	            	<tr>
               		<td>
+                		<a href="com/github/tilastokeskus/matertis/core/command/package-summary.html">com.github.tilastokeskus.matertis.core.command</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
                 		<a href="com/github/tilastokeskus/matertis/ui/package-summary.html">com.github.tilastokeskus.matertis.ui</a>
               		</td>
             	</tr>
