--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/Main.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/Main.html
@@ -19,11 +19,15 @@
 <a class="jxr_linenumber" name="L11" href="#L11">11</a>  <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">class</strong> <a href="../../../../com/github/tilastokeskus/matertis/Main.html">Main</a> {
 <a class="jxr_linenumber" name="L12" href="#L12">12</a>      
 <a class="jxr_linenumber" name="L13" href="#L13">13</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">void</strong> main(String[] args) {
-<a class="jxr_linenumber" name="L14" href="#L14">14</a>          <a href="../../../../com/github/tilastokeskus/matertis/ui/MenuUI.html">MenuUI</a> mainMenu = <strong class="jxr_keyword">new</strong> <a href="../../../../com/github/tilastokeskus/matertis/ui/MenuUI.html">MenuUI</a>(<span class="jxr_string">"Matertis"</span>);
-<a class="jxr_linenumber" name="L15" href="#L15">15</a>          SwingUtilities.invokeLater(mainMenu);
-<a class="jxr_linenumber" name="L16" href="#L16">16</a>      }
-<a class="jxr_linenumber" name="L17" href="#L17">17</a>  
-<a class="jxr_linenumber" name="L18" href="#L18">18</a>  }
+<a class="jxr_linenumber" name="L14" href="#L14">14</a>          showMainMenu();
+<a class="jxr_linenumber" name="L15" href="#L15">15</a>      }
+<a class="jxr_linenumber" name="L16" href="#L16">16</a>      
+<a class="jxr_linenumber" name="L17" href="#L17">17</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">void</strong> showMainMenu() {
+<a class="jxr_linenumber" name="L18" href="#L18">18</a>          <a href="../../../../com/github/tilastokeskus/matertis/ui/MenuUI.html">MenuUI</a> mainMenu = <strong class="jxr_keyword">new</strong> <a href="../../../../com/github/tilastokeskus/matertis/ui/MenuUI.html">MenuUI</a>(<span class="jxr_string">"Matertis"</span>);
+<a class="jxr_linenumber" name="L19" href="#L19">19</a>          SwingUtilities.invokeLater(mainMenu);
+<a class="jxr_linenumber" name="L20" href="#L20">20</a>      }
+<a class="jxr_linenumber" name="L21" href="#L21">21</a>  
+<a class="jxr_linenumber" name="L22" href="#L22">22</a>  }
 </pre>
 <hr/>
 <div id="footer">Copyright &#169; 2014. All rights reserved.</div>
