--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/package-summary.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/package-summary.html
@@ -40,6 +40,11 @@
                 		<a href="Main.html" target="classFrame">Main</a>
               		</td>
             	</tr>
+				            	<tr>
+              		<td>
+                		<a href="SettingsManager.html" target="classFrame">SettingsManager</a>
+              		</td>
+            	</tr>
 				        	</tbody>
       	</table>
 		
