--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/util/package-summary.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/util/package-summary.html
@@ -37,6 +37,11 @@
         	<tbody>
         		            	<tr>
               		<td>
+                		<a href="Command.html" target="classFrame">Command</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="TetrominoFactory.html" target="classFrame">TetrominoFactory</a>
               		</td>
             	</tr>
